add api for get instance rules
